--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
+    "next": "^13.4.12",
+    "querystring": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "moment": "^2.29.4",
-    "mysql": "^2.18.1",
-    "next": "13.4.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "eslint-config-next": "13.4.12"
   }
 }
